# poetry-monorepo-dependency-plugin

./: .gitignore  README.md  pom.xml  pyproject.toml
.github/workflows/: maven.yaml
src/poetry_monorepo_dependency_plugin/: path_dependency_remover.py  path_dependency_rewriter.py  plugin.py
tests/features/: remove-path-dependencies.feature  rewrite-path-dependencies.feature
tests/features/steps/: remove_path_dependencies_steps.py  rewrite_path_dependencies_steps.py
tests/resources/eggs/: pyproject.toml
tests/resources/ham/: pyproject.toml
tests/resources/project-with-local-dependencies/: pyproject.toml
tests/resources/spam/: pyproject.toml
