[tool.poetry]
name = "poetry-monorepo-dependency-plugin"
version = "1.0.1"
description = "Poetry plugin that generates more easily consumable archives for projects in a monorepo structure with path dependencies on other Poetry projects"
authors = ["Eric Konieczny <ekonieczny@cpointe-inc.com>"]
readme = "README.md"
repository = "https://bitbucket.org/cpointe/poetry-monorepo-dependency-plugin"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
behave = "^1.2.6"
nose = "^1.3.7"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-monorepo-dependency-plugin = "poetry_monorepo_dependency_plugin.plugin:MonorepoDependencyPlugin"

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
