[tool.poetry]
name = "poetry-monorepo-dependency-plugin"
version = "1.2.0"
description = "Poetry plugin that generates more easily consumable archives for projects in a monorepo structure with path dependencies on other Poetry projects"
authors = ["Eric Konieczny <ekoniec1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TechnologyBrewery/poetry-monorepo-dependency-plugin"

[tool.poetry.dependencies]
python = "^3.8"
poetry = ">=1.6"
poetry-plugin-export = ">=1.5.0"
cleo = ">=2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
behave = "^1.2.6"
nose = "^1.3.7"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-monorepo-dependency-plugin = "poetry_monorepo_dependency_plugin.plugin:MonorepoDependencyPlugin"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
